@startuml

skinparam class {
  BackgroundColor PaleTurquoise
  BorderColor Teal
  ArrowColor SeaGreen
}

class PhonemeType {
  id: Integer
  typeName: String
}

class SubPhonemeType {
  id: Integer
  subtypeName: String
  phonemeType: Integer
  order : Integer
}
PhonemeType "1" -- "1..*" SubPhonemeType

class PhonemeInformation {
  id: Integer
  label: String
  soundFilePath: String
  subPhonemeType:Integer
}
PhonemeInformation "1..*" -- "1" SubPhonemeType

class ExampleWord {
  id: Integer
  label: String
  ipaLabel: String
  phonemeId:Integer
}

ExampleWord "1..*"  -- "1" PhonemeInformation

class MinimalPairCategory {
  id: Integer
  phoneme: Integer
  associatedPhoneme: Integer
  subPhonemeTypeId: Integer
}

PhonemeInformation "1" -- "1..*" MinimalPairCategory

class MinimalPairInformation {
  id: Integer
  label: String
  IpaLabel: String
  associatedWordId: Integer
  categoryId: Integer
}

MinimalPairInformation "1..*" -- "1" MinimalPairCategory

class MinimalPairWordPhonemeLetters {
  minimalPairId: Integer
  letters: String
  ipaLetters: String
}

MinimalPairWordPhonemeLetters "1" -- "1" MinimalPairInformation

class Score {
  id: Integer
  score: String
  date: Date
  minimalPairCategoryId: String
}

Score "1..*" -- "1" MinimalPairCategory

class User {
  id: Integer
  username: String
  password: String
}

User "1" -- "1..*" Score

@enduml